# ccp

./: CLAUDE.md  README.md  solve_unsolved_issues.sh
.claude-plugin/: marketplace.json
cx/: README.md
cx/.claude-plugin/: plugin.json
cx/agents/: code-reviewer-tester.md  problem-researcher.md  problem-validator.md  solution-implementer.md  solution-reviewer.md
cx/commands/: problem.md
cx/skills/agent-writer/: SKILL.md
cx/skills/chainsaw-tester/references/: chainsaw-basics.md  error-testing.md
cx/skills/claude-md-writer/: SKILL.md
cx/skills/github-cicd/: SKILL.md
cx/skills/github-cicd/references/: caching-strategies.md  workflow-basics.md
cx/skills/go-dev/: SKILL.md
cx/skills/go-dev/assets/: .golangci.yml
cx/skills/go-dev/references/: fail-early-patterns.md  k8s-operator-patterns.md
cx/skills/issue-manager/: SKILL.md
cx/skills/issue-manager/scripts/: archive  solve-unsolved
cx/skills/web-doc/: SKILL.md
cxa/: README.md
cxa/.claude-plugin/: plugin.json
cxa/agents/: problem-researcher.md  solution-implementer.md  solution-proposer.md  solution-reviewer.md
cxa/commands/: problem.md  refine.md  solve.md
cxa/skills/ark-agent-dev/: SKILL.md
cxa/skills/ark-agent-dev/references/: agent-patterns.md  team-patterns.md  template-syntax.md  tool-patterns.md
cxg/: README.md
cxg/.claude-plugin/: plugin.json
cxg/agents/: README.md  code-reviewer-tester.md  documentation-updater.md  problem-researcher.md  problem-validator.md  solution-implementer.md  solution-proposer.md  solution-reviewer.md
cxg/commands/: solve.md
cxg/skills/chainsaw-tester/references/: assertion-patterns.md
cxg/skills/go-dev/: SKILL.md
cxg/skills/go-dev/references/: defensive-patterns.md
cxg/skills/issue-manager/: SKILL.md
cxp/: README.md
cxp/.claude-plugin/: plugin.json
cxp/agents/: README.md  bug-hunter.md  code-quality-reviewer.md  code-reviewer-tester.md  documentation-updater.md  problem-researcher.md  problem-validator.md  solution-implementer.md  solution-proposer.md  solution-reviewer.md
cxp/commands/: audit.md  implement.md  review.md  solve.md
cxp/skills/fastapi-dev/: SKILL.md
cxp/skills/fastapi-dev/references/: fastapi-patterns.md
cxp/skills/issue-management/: SKILL.md
cxp/skills/issue-manager/: SKILL.md
cxp/skills/issue-manager/scripts/: archive  list-open
cxp/skills/pytest-tester/: SKILL.md
cxp/skills/python-dev/: SKILL.md
cxp/skills/python-dev/assets/: .pre-commit-config.yaml  pyproject.toml
cxp/skills/python-dev/references/: async-patterns.md  modern-python-2025.md  type-safety-patterns.md  uv-guide.md
cxp/skills/python-developer/: SKILL.md
cxp/skills/python-developer/references/: async-patterns.md  type-safety-patterns.md
cxp/skills/python-standards/: SKILL.md
cxp/skills/python-tester/: SKILL.md
cxp/skills/python-tester/references/: async-testing.md  bdd-workflow.md  external-sources.md  manual-testing.md  mocking-patterns.md  pytest-patterns.md  tdd-workflow.md  test-organization.md
cxp/skills/web-doc/: SKILL.md
cxt/: README.md
cxt/.claude-plugin/: plugin.json
cxt/agents/: README.md  code-reviewer-tester.md  documentation-updater.md  problem-researcher.md  problem-validator.md  solution-implementer.md  solution-proposer.md  solution-reviewer.md
cxt/commands/: problem.md  refine.md  solve.md
cxt/skills/issue-manager/: SKILL.md
cxt/skills/issue-manager/scripts/: scripts
cxt/skills/jest-tester/: SKILL.md
cxt/skills/jest-tester/references/: external-sources.md  mocking-patterns.md  tdd-workflow.md  test-organization.md
cxt/skills/typescript-dev/: SKILL.md
cxt/skills/typescript-developer/: SKILL.md
cxt/skills/typescript-developer/references/: async-patterns.md  modern-typescript-2025.md  pnpm-guide.md  type-safety-patterns.md
cxt/skills/vitest-tester/: SKILL.md
cxt/skills/vitest-tester/references/: async-testing.md  external-sources.md  mocking-patterns.md  test-organization.md
cxt/skills/web-doc/: SKILL.md
docs/web/: README.md  anthropic-agent-sdk-migration.md  anthropic-agent-sdk-overview.md  anthropic-agent-sdk-typescript.md  anthropic-agent-skills.md  anthropic-agents-404-note.md  anthropic-prompt-engineering.md  anthropic-skills.md  anthropic-tool-use.md  claude-md-best-practices.md  fail-fast-programming-principles.md  issue-management-patterns.md  prompt-learning-agent-optimization.md  python-typing-best-practices.md
go-k8s/: GO_PATTERNS.md  REPORT_TEMPLATES.md  conventions.md  test-execution.md
go-k8s/agents/: code-reviewer-tester.md  documentation-updater.md  problem-researcher.md  problem-validator.md  solution-implementer.md  solution-reviewer.md
go-k8s/commands/: problem.md  refine.md  solve.md
go-k8s/skills/chainsaw-tester/: SKILL.md
go-k8s/skills/chainsaw-tester/references/: ark-examples.md  chainsaw-basics.md  debugging.md  jp-functions.md  mock-services.md  operator-testing.md
go-k8s/skills/github-cicd/: UPDATES-2025.md
go-k8s/skills/github-cicd/references/: debugging-workflows.md  docker-build-patterns.md  gh-cli-patterns.md  kubernetes-deployment.md  reusable-workflows.md  testing-strategies.md
go-k8s/skills/go-dev/references/: common-antipatterns.md  modern-go-2025.md
go-k8s/skills/issue-manager/: SKILL.md
go-k8s/skills/issue-manager/scripts/: archive  list-solved
go-k8s/skills/web-doc/: SKILL.md
scripts/: solve_unsolved_issues.sh
